--- a/admindollar/.settings/org.eclipse.buildship.core.prefs
+++ b/admindollar/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=--init-script C\:\\Users\\Samad\\AppData\\Roaming\\TabNine\\language-s
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(7.4.2))
-connection.project.dir=
+connection.project.dir=..
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=C\:/Program Files (x86)/Common Files/Oracle/Java
