--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     implementation libs.sdp.android
     implementation libs.glide
     annotationProcessor libs.compiler
+
+    implementation 'com.razorpay:checkout:1.6.18'
+
 }
