--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 plugins {
     alias(libs.plugins.androidApplication)
-    id 'com.google.gms.google-services'
+    alias(libs.plugins.googleGmsGoogleServices)
 }
 
 android {
-    namespace 'com.example.dollarwallpaper'
+    namespace 'com.starsky.dollarwallpaper'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.dollarwallpaper"
-        minSdk 21
+        applicationId "com.starsky.dollarwallpaper"
+        minSdk 23
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        versionCode 7
+        versionName "1.6"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -39,21 +39,18 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.firebase.auth
-    implementation libs.firebase.database
+    implementation libs.firebase.firestore
     implementation libs.firebase.analytics
-    implementation libs.firebase.firestore
-    implementation libs.firebase.firestore
-    implementation libs.firebase.storage
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation libs.circleimageview
-
+    implementation libs.firebase.storage
 
     implementation libs.sdp.android
     implementation libs.glide
     annotationProcessor libs.compiler
 
-    implementation 'com.razorpay:checkout:1.6.18'
+    implementation 'com.google.android.gms:play-services-ads:22.1.0'
 
 }
