--- a/admindollar/build.gradle
+++ b/admindollar/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     alias(libs.plugins.androidApplication)
-    id 'com.google.gms.google-services'
+    alias(libs.plugins.googleGmsGoogleServices)
 }
 
 android {
-    namespace 'com.example.admindollar'
+    namespace 'com.starsky.admindollar'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.admindollar"
+        applicationId "com.starsky.admindollar"
         minSdk 23
         targetSdk 34
         versionCode 1
@@ -38,13 +38,15 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
-    implementation libs.firebase.auth
-    implementation libs.firebase.database
-    implementation libs.firebase.analytics
-    implementation libs.firebase.firestore
-    implementation libs.firebase.storage
     implementation libs.circleimageview
+    testImplementation libs.junit
+    androidTestImplementation libs.ext.junit
+    androidTestImplementation libs.espresso.core
 
     implementation libs.sdp.android
     implementation libs.glide
+    implementation libs.firebase.auth
+    implementation libs.firebase.firestore
+    implementation libs.firebase.analytics
+    implementation libs.firebase.storage
 }
